Fix z-index for sticky

--- a/src/app/Calendar/index.styles.scss
+++ b/src/app/Calendar/index.styles.scss
@@ -13,7 +13,7 @@
   top: 0;
   position: sticky;
   background-color: v.$background-dark;
-  z-index: 1;
+  z-index: 11;
 }
 
 .calendarHeader {
